--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -44,10 +44,16 @@
     <Compile Include="scene\BaseSceneNode.cs" />
     <Compile Include="scene\DataNodeFactory.cs" />
     <Compile Include="scene\Extensions.cs" />
+    <Compile Include="scene\Face.cs" />
+    <Compile Include="scene\FaceFactory.cs" />
     <Compile Include="scene\ICurve.cs" />
     <Compile Include="scene\IDataNode.cs" />
+    <Compile Include="scene\IFace.cs" />
+    <Compile Include="scene\IFaceFactory.cs" />
     <Compile Include="scene\IMesh.cs" />
+    <Compile Include="scene\IMeshFactory.cs" />
     <Compile Include="scene\IMeshLoader.cs" />
+    <Compile Include="scene\IMeshLoaderFactory.cs" />
     <Compile Include="scene\IPoints.cs" />
     <Compile Include="scene\IPolygon.cs" />
     <Compile Include="scene\IScene.cs" />
@@ -61,12 +67,14 @@
     <Compile Include="scene\IVertexFactory.cs" />
     <Compile Include="scene\IXmlDataNodeReader.cs" />
     <Compile Include="scene\Mesh.cs" />
+    <Compile Include="scene\MeshFactory.cs" />
     <Compile Include="scene\ObjMeshLoader.cs" />
     <Compile Include="scene\RotationNode.cs" />
     <Compile Include="scene\ScaleNode.cs" />
     <Compile Include="scene\SceneNodeFactory.cs" />
     <Compile Include="scene\ShapeFactory.cs" />
     <Compile Include="scene\ShapeNode.cs" />
+    <Compile Include="scene\TypeEnums.cs" />
     <Compile Include="scene\TransformNode.cs" />
     <Compile Include="scene\TranslationNode.cs" />
     <Compile Include="scene\Triangle.cs" />
