--- a/Starter3D/Starter3D.API.Test/Starter3D.API.Test.csproj
+++ b/Starter3D/Starter3D.API.Test/Starter3D.API.Test.csproj
@@ -28,6 +28,9 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1506.2515\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
@@ -41,6 +44,7 @@
     <Compile Include="math\PlaneTest.cs" />
     <Compile Include="math\RayTest.cs" />
     <Compile Include="math\BoundingSphereTest.cs" />
+    <Compile Include="scene\MeshTest.cs" />
     <Compile Include="scene\ObjMeshLoaderTest.cs" />
     <Compile Include="scene\XMLReaderTest.cs" />
   </ItemGroup>
