--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -70,6 +70,8 @@
     <Compile Include="scene\Mesh.cs" />
     <Compile Include="scene\MeshFactory.cs" />
     <Compile Include="scene\ObjMeshLoader.cs" />
+    <Compile Include="scene\OrtographicCamera.cs" />
+    <Compile Include="scene\PerspectiveCamera.cs" />
     <Compile Include="scene\RotationNode.cs" />
     <Compile Include="scene\ScaleNode.cs" />
     <Compile Include="scene\SceneNodeFactory.cs" />
