--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -41,51 +41,51 @@
     <Compile Include="math\BoundingSphere.cs" />
     <Compile Include="math\Plane.cs" />
     <Compile Include="math\Ray.cs" />
-    <Compile Include="scene\geometry\factories\MeshLoaderFactory.cs" />
+    <Compile Include="geometry\factories\MeshLoaderFactory.cs" />
     <Compile Include="scene\nodes\BaseSceneNode.cs" />
     <Compile Include="scene\nodes\CameraNode.cs" />
     <Compile Include="scene\persistence\factories\DataNodeFactory.cs" />
     <Compile Include="scene\nodes\DirectionalLight.cs" />
-    <Compile Include="scene\utils\Extensions.cs" />
-    <Compile Include="scene\geometry\Face.cs" />
-    <Compile Include="scene\geometry\factories\FaceFactory.cs" />
-    <Compile Include="scene\geometry\ICurve.cs" />
+    <Compile Include="utils\Extensions.cs" />
+    <Compile Include="geometry\Face.cs" />
+    <Compile Include="geometry\factories\FaceFactory.cs" />
+    <Compile Include="geometry\ICurve.cs" />
     <Compile Include="scene\persistence\IDataNode.cs" />
-    <Compile Include="scene\geometry\IFace.cs" />
-    <Compile Include="scene\geometry\factories\IFaceFactory.cs" />
-    <Compile Include="scene\geometry\IMesh.cs" />
-    <Compile Include="scene\geometry\factories\IMeshFactory.cs" />
-    <Compile Include="scene\geometry\loaders\IMeshLoader.cs" />
-    <Compile Include="scene\geometry\factories\IMeshLoaderFactory.cs" />
-    <Compile Include="scene\geometry\IPoints.cs" />
-    <Compile Include="scene\geometry\IPolygon.cs" />
+    <Compile Include="geometry\IFace.cs" />
+    <Compile Include="geometry\factories\IFaceFactory.cs" />
+    <Compile Include="geometry\IMesh.cs" />
+    <Compile Include="geometry\factories\IMeshFactory.cs" />
+    <Compile Include="geometry\loaders\IMeshLoader.cs" />
+    <Compile Include="geometry\factories\IMeshLoaderFactory.cs" />
+    <Compile Include="geometry\IPoints.cs" />
+    <Compile Include="geometry\IPolygon.cs" />
     <Compile Include="scene\nodes\ISceneNode.cs" />
     <Compile Include="scene\nodes\factories\ISceneNodeFactory.cs" />
-    <Compile Include="scene\geometry\IShape.cs" />
-    <Compile Include="scene\geometry\factories\IShapeFactory.cs" />
-    <Compile Include="scene\geometry\ISurface.cs" />
-    <Compile Include="scene\geometry\IVertex.cs" />
+    <Compile Include="geometry\IShape.cs" />
+    <Compile Include="geometry\factories\IShapeFactory.cs" />
+    <Compile Include="geometry\ISurface.cs" />
+    <Compile Include="geometry\IVertex.cs" />
     <Compile Include="scene\persistence\factories\IDataNodeFactory.cs" />
-    <Compile Include="scene\geometry\factories\IVertexFactory.cs" />
+    <Compile Include="geometry\factories\IVertexFactory.cs" />
     <Compile Include="scene\persistence\IXmlDataNodeReader.cs" />
     <Compile Include="scene\nodes\LightNode.cs" />
-    <Compile Include="scene\geometry\Mesh.cs" />
-    <Compile Include="scene\geometry\factories\MeshFactory.cs" />
-    <Compile Include="scene\geometry\loaders\ObjMeshLoader.cs" />
+    <Compile Include="geometry\Mesh.cs" />
+    <Compile Include="geometry\factories\MeshFactory.cs" />
+    <Compile Include="geometry\loaders\ObjMeshLoader.cs" />
     <Compile Include="scene\nodes\OrtographicCamera.cs" />
     <Compile Include="scene\nodes\PerspectiveCamera.cs" />
     <Compile Include="scene\nodes\PointLight.cs" />
     <Compile Include="scene\nodes\RotationNode.cs" />
     <Compile Include="scene\nodes\ScaleNode.cs" />
     <Compile Include="scene\nodes\factories\SceneNodeFactory.cs" />
-    <Compile Include="scene\geometry\factories\ShapeFactory.cs" />
+    <Compile Include="geometry\factories\ShapeFactory.cs" />
     <Compile Include="scene\nodes\ShapeNode.cs" />
-    <Compile Include="scene\utils\TypeEnums.cs" />
+    <Compile Include="utils\TypeEnums.cs" />
     <Compile Include="scene\nodes\TransformNode.cs" />
     <Compile Include="scene\nodes\TranslationNode.cs" />
-    <Compile Include="scene\geometry\Triangle.cs" />
-    <Compile Include="scene\geometry\Vertex.cs" />
-    <Compile Include="scene\geometry\factories\VertexFactory.cs" />
+    <Compile Include="geometry\Triangle.cs" />
+    <Compile Include="geometry\Vertex.cs" />
+    <Compile Include="geometry\factories\VertexFactory.cs" />
     <Compile Include="scene\persistence\XMLDataNode.cs" />
     <Compile Include="scene\persistence\XMLDataNodeReader.cs" />
   </ItemGroup>
