--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -37,12 +37,15 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="materials\IMaterial.cs" />
+    <Compile Include="materials\Material.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="math\BoundingBox.cs" />
     <Compile Include="math\BoundingSphere.cs" />
     <Compile Include="math\Plane.cs" />
     <Compile Include="math\Ray.cs" />
     <Compile Include="geometry\factories\MeshLoaderFactory.cs" />
+    <Compile Include="renderer\IRenderer.cs" />
     <Compile Include="scene\nodes\BaseSceneNode.cs" />
     <Compile Include="scene\nodes\CameraNode.cs" />
     <Compile Include="scene\persistence\factories\DataNodeFactory.cs" />
@@ -89,12 +92,8 @@
     <Compile Include="geometry\factories\VertexFactory.cs" />
     <Compile Include="scene\persistence\XMLDataNode.cs" />
     <Compile Include="scene\persistence\XMLDataNodeReader.cs" />
-    <Compile Include="renderer\OpenGLMesh.cs" />
-    <Compile Include="renderer\OpenGLHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="renderer\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
