--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -37,8 +37,10 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="materials\IMaterial.cs" />
-    <Compile Include="materials\Material.cs" />
+    <Compile Include="resources\IMaterial.cs" />
+    <Compile Include="resources\IMaterialFactory.cs" />
+    <Compile Include="resources\IResourceManager.cs" />
+    <Compile Include="resources\Material.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="math\BoundingBox.cs" />
     <Compile Include="math\BoundingSphere.cs" />
@@ -46,6 +48,8 @@
     <Compile Include="math\Ray.cs" />
     <Compile Include="geometry\factories\MeshLoaderFactory.cs" />
     <Compile Include="renderer\IRenderer.cs" />
+    <Compile Include="resources\MaterialFactory.cs" />
+    <Compile Include="resources\ResourceManager.cs" />
     <Compile Include="scene\nodes\BaseSceneNode.cs" />
     <Compile Include="scene\nodes\CameraNode.cs" />
     <Compile Include="scene\persistence\factories\DataNodeFactory.cs" />
