--- a/Starter3D/Starter3D.Examples/Starter3D.Examples.csproj
+++ b/Starter3D/Starter3D.Examples/Starter3D.Examples.csproj
@@ -43,9 +43,16 @@
     </Reference>
     <Reference Include="System.Drawing" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="scenes\planeNormals.obj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="scenes\resources.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="scenes\testMeshSceneNormals.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="scenes\testMeshScene.xml">
