Added texture support

--- a/Starter3D/Starter3D/Starter3D.OpenGL.csproj
+++ b/Starter3D/Starter3D/Starter3D.OpenGL.csproj
@@ -153,5 +153,11 @@
     <Content Include="shaders\edwardsVertex.glsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="shaders\blinnPhongTextureVertex.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="shaders\blinnPhongTextureFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
