--- a/Starter3D/Starter3D/Starter3D.csproj
+++ b/Starter3D/Starter3D/Starter3D.csproj
@@ -122,6 +122,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="ShaderExample.cs" />
+    <Compile Include="SceneExample.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
