--- a/Starter3D/Starter3D.Examples/Starter3D.Examples.csproj
+++ b/Starter3D/Starter3D.Examples/Starter3D.Examples.csproj
@@ -69,6 +69,9 @@
     <Content Include="resources\resources.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scenes\testMultiObjectMultiTextureNoSceneGraph.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="scenes\testMultiObjectMultiTexture.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
