--- a/Starter3D/Starter3D.Controllers/Starter3D.Controllers.csproj
+++ b/Starter3D/Starter3D.Controllers/Starter3D.Controllers.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B3CAC997-4EE0-4846-949F-5FB173269F74}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Starter3D.Examples</RootNamespace>
-    <AssemblyName>Starter3D.Examples</AssemblyName>
+    <RootNamespace>Starter3D.Controllers</RootNamespace>
+    <AssemblyName>Starter3D.Controllers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
